--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@mui/material": "^5.13.5",
+    "@mui/styled-engine-sc": "^5.12.0",
     "bcrypt": "^5.1.0",
     "connect-session-knex": "^3.0.1",
     "cookie-parser": "^1.4.6",
@@ -29,7 +31,9 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "knex": "^2.4.2",
-    "pg": "^8.10.0"
+    "pg": "^8.10.0",
+    "reactstrap": "^9.2.0",
+    "styled-components": "^5.3.11"
   },
   "devDependencies": {
     "eslint": "^8.39.0",
