--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "bootstrap": "^5.3.0",
     "connect-session-knex": "^3.0.1",
     "cookie-parser": "^1.4.6",
     "cookie-session": "^2.0.0",
@@ -29,7 +30,8 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "knex": "^2.4.2",
-    "pg": "^8.10.0"
+    "pg": "^8.10.0",
+    "reactstrap": "^9.2.0"
   },
   "devDependencies": {
     "eslint": "^8.39.0",
